--- a/templates/actor/parts/actor-equipment.html
+++ b/templates/actor/parts/actor-equipment.html
@@ -1,24 +1,325 @@
-<ol class="items-list">
-  <li class="item flexrow items-header">
-    <div class="item-name">Name</div>
-    <div class="item-formula">Roll Formula</div>
-    <div class="item-controls">
-      <a class="item-control item-create" title="Create item" data-type="item"><i class="fas fa-plus"></i> Add item</a>
-    </div>
-  </li>
-  {{#each gear as |item id|}}
-    <li class="item flexrow" data-item-id="{{item._id}}">
-      <div class="item-name">
-        <div class="item-image">
-          <a class="rollable" data-roll-type="item"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/></a>
-        </div>
-        <h4>{{item.name}}</h4>
+<div class="resource flex-group-center">
+  <h2>Money</h2>
+</div>
+
+<div class="trait-header">
+  <div class="resources grid grid-4col">
+    <div class="resource flex-group-center">
+      <div class="resource-content flexrow flex-center flex-between">
+        <label for="system.pp" class="resource-label">PP</label>
+        <input type="text" name="system.pp" value="{{system.pp}}" data-dtype="number"/>
       </div>
-      <div class="item-formula item-prop">{{item.system.formula}}</div>
+    </div>
+    <div class="resource flex-group-center">
+      <div class="resource-content flexrow flex-center flex-between">
+        <label for="system.gp" class="resource-label">GP</label>
+        <input type="text" name="system.gp" value="{{system.gp}}" data-dtype="number"/>
+      </div>
+    </div>
+    <div class="resource flex-group-center">
+      <div class="resource-content flexrow flex-center flex-between">
+        <label for="system.sp" class="resource-label">SP</label>
+        <input type="text" name="system.sp" value="{{system.sp}}" data-dtype="number"/>
+      </div>
+    </div>
+    <div class="resource flex-group-center">
+      <div class="resource-content flexrow flex-center flex-between">
+        <label for="system.cp" class="resource-label">CP</label>
+        <input type="text" name="system.cp" value="{{system.cp}}" data-dtype="number"/>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="resource flex-group-center">
+  <h2>Gear</h2>
+</div>
+
+<div class="trait-group">
+  <h3>Weapons</h3>
+  <ol class="items-list">
+    <li class="item flexrow items-header">
+      <div class="item-name">Name</div>
+      <div class="item-name">Action</div>
       <div class="item-controls">
-        <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        <a class="item-control item-create" title="Create Weapon" data-type="weapon"><i class="fas fa-plus"></i> Add Weapon</a>
       </div>
     </li>
-  {{/each}}
-</ol>
+    {{#each weapons as |weapon id|}}
+      <li class="item flexrow" data-item-id="{{weapon._id}}">
+        <div class="item-name">
+          <div class="item-image">
+            <a class="rollable" data-roll-type="item"><img src="{{weapon.img}}" title="{{weapon.name}}" width="24" height="24"/></a>
+          </div>
+          <h4>{{weapon.name}}</h4>
+        </div>
+        <div class="item-name">
+          {{#if weapon.system.dice}}
+            <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{weapon.system.dice}}" data-label="{{weapon.name}}" data-kind="weapon"><i class="fas fa-dice-d20"></i></button>
+          {{/if}}
+        </div>
+        <div class="item-controls">
+          <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        </div>
+      </li>
+    {{/each}}
+  </ol>
+</div>
+
+<div class="trait-group">
+  <h3>Armor</h3>
+  <ol class="items-list">
+    <li class="item flexrow items-header">
+      <div class="item-name">Name</div>
+      <div class="item-name">Action</div>
+      <div class="item-controls">
+        <a class="item-control item-create" title="Create Armor" data-type="armor"><i class="fas fa-plus"></i> Add Armor</a>
+      </div>
+    </li>
+    {{#each armors as |armor id|}}
+      <li class="item flexrow" data-item-id="{{armor._id}}">
+        <div class="item-name">
+          <div class="item-image">
+            <a class="rollable" data-roll-type="item"><img src="{{armor.img}}" title="{{armor.name}}" width="24" height="24"/></a>
+          </div>
+          <h4>{{armor.name}}</h4>
+        </div>
+        <div class="item-name">
+          {{#if armor.system.dice}}
+            <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{armor.system.dice}}" data-label="{{armor.name}}" data-kind="armor"><i class="fas fa-dice-d20"></i></button>
+          {{/if}}
+        </div>
+        <div class="item-controls">
+          <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        </div>
+      </li>
+    {{/each}}
+  </ol>
+</div>
+
+<div class="trait-group">
+  <h3>Potions</h3>
+  <ol class="items-list">
+    <li class="item flexrow items-header">
+      <div class="item-name">Name</div>
+      <div class="item-name">Action</div>
+      <div class="item-controls">
+        <a class="item-control item-create" title="Create Potion" data-type="potion"><i class="fas fa-plus"></i> Add Potion</a>
+      </div>
+    </li>
+    {{#each potions as |potion id|}}
+      <li class="item flexrow" data-item-id="{{potion._id}}">
+        <div class="item-name">
+          <div class="item-image">
+            <a class="rollable" data-roll-type="item"><img src="{{potion.img}}" title="{{potion.name}}" width="24" height="24"/></a>
+          </div>
+          <h4>{{potion.name}}</h4>
+        </div>
+        <div class="item-name">
+          {{#if potion.system.dice}}
+            <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{potion.system.dice}}" data-label="{{potion.name}}" data-kind="potion"><i class="fas fa-dice-d20"></i></button>
+          {{/if}}
+        </div>
+        <div class="item-controls">
+          <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        </div>
+      </li>
+    {{/each}}
+  </ol>
+</div>
+
+<div class="trait-group">
+  <h3>Lacrima</h3>
+  <ol class="items-list">
+    <li class="item flexrow items-header">
+      <div class="item-name">Name</div>
+      <div class="item-name">Action</div>
+      <div class="item-controls">
+        <a class="item-control item-create" title="Create Lacrima" data-type="lacrima"><i class="fas fa-plus"></i> Add Lacrima</a>
+      </div>
+    </li>
+    {{#each lacrimas as |lacrima id|}}
+      <li class="item flexrow" data-item-id="{{lacrima._id}}">
+        <div class="item-name">
+          <div class="item-image">
+            <a class="rollable" data-roll-type="item"><img src="{{lacrima.img}}" title="{{lacrima.name}}" width="24" height="24"/></a>
+          </div>
+          <h4>{{lacrima.name}}</h4>
+        </div>
+        <div class="item-name">
+          {{#if lacrima.system.dice}}
+            <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{lacrima.system.dice}}" data-label="{{lacrima.name}}" data-kind="lacrima"><i class="fas fa-dice-d20"></i></button>
+          {{/if}}
+        </div>
+        <div class="item-controls">
+          <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        </div>
+      </li>
+    {{/each}}
+  </ol>
+</div>
+
+<div class="trait-group">
+  <h3>Equipment</h3>
+  <ol class="items-list">
+    <li class="item flexrow items-header">
+      <div class="item-name">Name</div>
+      <div class="item-name">Action</div>
+      <div class="item-controls">
+        <a class="item-control item-create" title="Create Equipment" data-type="equipment"><i class="fas fa-plus"></i> Add Equipment</a>
+      </div>
+    </li>
+    {{#each equipment as |gear id|}}
+      <li class="item flexrow" data-item-id="{{gear._id}}">
+        <div class="item-name">
+          <div class="item-image">
+            <a class="rollable" data-roll-type="item"><img src="{{gear.img}}" title="{{gear.name}}" width="24" height="24"/></a>
+          </div>
+          <h4>{{gear.name}}</h4>
+        </div>
+        <div class="item-name">
+          {{#if gear.system.dice}}
+            <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{gear.system.dice}}" data-label="{{gear.name}}" data-kind="equipment"><i class="fas fa-dice-d20"></i></button>
+          {{/if}}
+        </div>
+        <div class="item-controls">
+          <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        </div>
+      </li>
+    {{/each}}
+  </ol>
+</div>
+
+<div class="trait-group">
+  <h3>Trinkets</h3>
+  <ol class="items-list">
+    <li class="item flexrow items-header">
+      <div class="item-name">Name</div>
+      <div class="item-name">Action</div>
+      <div class="item-controls">
+        <a class="item-control item-create" title="Create Trinket" data-type="trinket"><i class="fas fa-plus"></i> Add Trinket</a>
+      </div>
+    </li>
+    {{#each trinkets as |trinket id|}}
+      <li class="item flexrow" data-item-id="{{trinket._id}}">
+        <div class="item-name">
+          <div class="item-image">
+            <a class="rollable" data-roll-type="item"><img src="{{trinket.img}}" title="{{trinket.name}}" width="24" height="24"/></a>
+          </div>
+          <h4>{{trinket.name}}</h4>
+        </div>
+        <div class="item-name">
+          {{#if trinket.system.dice}}
+            <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{trinket.system.dice}}" data-label="{{trinket.name}}" data-kind="trinket"><i class="fas fa-dice-d20"></i></button>
+          {{/if}}
+        </div>
+        <div class="item-controls">
+          <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        </div>
+      </li>
+    {{/each}}
+  </ol>
+</div>
+
+<div class="trait-group">
+  <h3>Recipes</h3>
+  <ol class="items-list">
+    <li class="item flexrow items-header">
+      <div class="item-name">Name</div>
+      <div class="item-name">Action</div>
+      <div class="item-controls">
+        <a class="item-control item-create" title="Create Recipe" data-type="recipe"><i class="fas fa-plus"></i> Add Recipe</a>
+      </div>
+    </li>
+    {{#each recipes as |recipe id|}}
+      <li class="item flexrow" data-item-id="{{recipe._id}}">
+        <div class="item-name">
+          <div class="item-image">
+            <a class="rollable" data-roll-type="item"><img src="{{recipe.img}}" title="{{recipe.name}}" width="24" height="24"/></a>
+          </div>
+          <h4>{{recipe.name}}</h4>
+        </div>
+        <div class="item-name">
+          {{#if recipe.system.dice}}
+            <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{recipe.system.dice}}" data-label="{{recipe.name}}" data-kind="recipe"><i class="fas fa-dice-d20"></i></button>
+          {{/if}}
+        </div>
+        <div class="item-controls">
+          <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        </div>
+      </li>
+    {{/each}}
+  </ol>
+</div>
+
+<div class="trait-group">
+  <h3>Resources</h3>
+  <ol class="items-list">
+    <li class="item flexrow items-header">
+      <div class="item-name">Name</div>
+      <div class="item-name">Action</div>
+      <div class="item-controls">
+        <a class="item-control item-create" title="Create Resource" data-type="resource"><i class="fas fa-plus"></i> Add Resource</a>
+      </div>
+    </li>
+    {{#each resources as |resource id|}}
+      <li class="item flexrow" data-item-id="{{resource._id}}">
+        <div class="item-name">
+          <div class="item-image">
+            <a class="rollable" data-roll-type="item"><img src="{{resource.img}}" title="{{resource.name}}" width="24" height="24"/></a>
+          </div>
+          <h4>{{resource.name}}</h4>
+        </div>
+        <div class="item-name">
+          {{#if resource.system.dice}}
+            <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{resource.system.dice}}" data-label="{{resource.name}}" data-kind="resource"><i class="fas fa-dice-d20"></i></button>
+          {{/if}}
+        </div>
+        <div class="item-controls">
+          <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        </div>
+      </li>
+    {{/each}}
+  </ol>
+</div>
+
+<div class="trait-group">
+  <h3>Treasures</h3>
+  <ol class="items-list">
+    <li class="item flexrow items-header">
+      <div class="item-name">Name</div>
+      <div class="item-name">Action</div>
+      <div class="item-controls">
+        <a class="item-control item-create" title="Create Treasure" data-type="treasure"><i class="fas fa-plus"></i> Add Treasure</a>
+      </div>
+    </li>
+    {{#each treasures as |treasure id|}}
+      <li class="item flexrow" data-item-id="{{treasure._id}}">
+        <div class="item-name">
+          <div class="item-image">
+            <a class="rollable" data-roll-type="item"><img src="{{treasure.img}}" title="{{treasure.name}}" width="24" height="24"/></a>
+          </div>
+          <h4>{{treasure.name}}</h4>
+        </div>
+        <div class="item-name">
+          {{#if treasure.system.dice}}
+            <button title="Roll Normally" class="role rollable" data-rolltype="actor" data-roll="{{treasure.system.dice}}" data-label="{{treasure.name}}" data-kind="treasure"><i class="fas fa-dice-d20"></i></button>
+          {{/if}}
+        </div>
+        <div class="item-controls">
+          <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+          <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+        </div>
+      </li>
+    {{/each}}
+  </ol>
+</div>
